--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
       "no-shadow": "off",
       "no-param-reassign": "off",
       "eol-last": "off",
-      "arrow-parens": "off"
+      "arrow-parens": "off",
+      "linebreak-style": ["error", "windows"]
     },
     "ignorePatterns": [
       "dist/",
