--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "stylelint-scss": "^3.17.2",
     "webpack": "^5.3.1",
     "webpack-cli": "^4.1.0"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0"
   }
 }
